Fixing the gap in `layout-1-sidebar` between main-content and sidebar on mobile.

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -83,6 +83,7 @@ $grid-column-gutters: (
 // Layouts 2.
 
 $gap-default:                   1rem;
+$gap-factor-for-page-levels:    3;
 
 
 // #############################################################################
