--- a/src/scss/layouts/_layout-1-sidebar.scss
+++ b/src/scss/layouts/_layout-1-sidebar.scss
@@ -1,9 +1,11 @@
 
 .layout-1-sidebar {
-  @include grid-wrapping-for-cols(1, $item-classname: layout__element);
 
   .layout__element {
     @include fit-content();
+  }
+  .layout__sidebar {
+    @include gap(margin, top, $gap-factor-for-page-levels);
   }
 
   // ---------------------------------------------------------------------------
@@ -11,7 +13,6 @@
 
   @media (min-width: breakpoint(wide-min)) {
     @include cheap-grid($wrap: true, $item-classname: layout__element);
-    @include grid-wrapping-for-cols(2, $item-classname: layout__element);
 
     .layout__element {
       flex: 0 0 auto;
@@ -20,6 +21,10 @@
     // The default state assumes that we don't actually have a sidebar.
     .layout__main {
       width: 100%;
+    }
+
+    .layout__sidebar {
+      margin-top: 0;
     }
 
     // But if there is a sidebar, then:
